# mnemo

./: .env.example  .flake8  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API_CONTRACT.md  DEPLOYMENT.md
examples/: README.md  example_requests.py  sample_dataset.txt
src/nlp_service/: __init__.py
src/nlp_service/api/: dependencies.py  logging_config.py  main.py  metrics.py  schemas.py
src/nlp_service/config/: settings.py
src/nlp_service/core/: analyzer.py
src/nlp_service/domain/: models.py
src/nlp_service/interfaces/: __init__.py  protocols.py
src/nlp_service/services/: cache_service.py  fusion_service.py  heuristic_parser.py  history_service.py  llm_parser.py  postprocessor.py  preprocessor.py
tests/: conftest.py  test_api.py  test_cache_service.py  test_fusion_service.py  test_heuristic_parser.py  test_history_service.py  test_integration.py  test_postprocessor.py  test_preprocessor.py
