[tool.poetry]
name = "nlp-service"
version = "0.1.0"
description = "NLP service for analyzing diary entries with category, action, and time extraction"
authors = ["Your Team"]
readme = "README.md"
packages = [{include = "nlp_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5"
pydantic-settings = "^2.1"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
redis = "^5.0"
httpx = "^0.26"
openai = "^1.10"
python-dotenv = "^1.0"
structlog = "^24.1"
prometheus-client = "^0.19"
tenacity = "^8.2"
phonenumbers = "^8.13"
pymorphy3 = "^1.3"
rapidfuzz = "^3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"
mypy = "^1.8"
black = "^24.1"
isort = "^5.13"
flake8 = "^7.0"
faker = "^22.0"
pytest-mock = "^3.12"
httpx = "^0.26"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/nlp_service --cov-report=html --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
